# lierlib

./: .gitignore  lier.py  lier2.py  lierlib.py  sx.py
Rearrangement/: CMakeLists.txt  main.cpp
Rearrangement/headers/: align.h
Rearrangement/test/: ME1_DEL.fastq.ref  shit.sus
pcrEfficiency/: DNA.py  PCRpredict.py  amplicon.py  gam.R  testing.py
